--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -1,1 +1,27 @@
-{}
+{
+    "De Gouden Draak - Home": "The Golden Dragon - Home",
+    "De Gouden Draak - Menukaart": "The Golden Dragon - Menu",
+    "De Gouden Draak - Nieuws": "The Golden Dragon - News",
+    "De Gouden Draak - Contact": "The Golden Dragon - Contact",
+    "De Gouden Draak": "The Golden Dragon",
+    "Chinees Indische Specialiteiten": "Chinese Indonesian Specialties",
+    "Menukaart": "Menu",
+    "Nieuws": "News",
+    "Contact": "Contact",
+    "Welkom bij De Gouden Draak. Klik op deze tekst om de aanbiedingen van deze week te zien!": "Welcome to The Golden Dragon. Click this text to see this week's offers!",
+    "Al jaren is De Gouden Draak een begrip als het gaat om de beste afhaalgerechten in 's-Hertogenbosch.": "For years, The Golden Dragon has been renowned for the best takeaway dishes in 's-Hertogenbosch.",
+    "Graag trakteren we u op authentieke gerechten uit de Cantonese keuken.": "We are pleased to offer you authentic dishes from Cantonese cuisine.",
+    "Speciale Studentenaanbieding": "Special Student Offer",
+    "Chinese Rijsttafel (2 personen)": "Chinese Rice Table (2 persons)",
+    "Maak een keuze uit 3 van onderstaande keuzegerechten:": "Choose 3 from the following dishes:",
+    "Garnalen met Gebakken Knoflook": "Shrimp with Fried Garlic",
+    "Kipfilet in Zwarte Bonen saus": "Chicken Fillet in Black Bean Sauce",
+    "Met witte rijst. (Nasi of bami voor meerprijs mogelijk.)": "With white rice. (Fried rice or noodles available for extra charge.)",
+    "Prijs:": "Price:",
+    "Download als PDF": "Download as PDF",
+    "Favorieten": "Favorites",
+    "De Gouden Draak is eenvoudig te vinden, vlak bij het centrum, 5 minuten lopen achter het centraal station.": "The Golden Dragon is easy to find, close to the center, 5 minutes walk behind the central station.",
+    "We hebben eindelijk nieuwe stoelen!!!": "We finally have new chairs!!!",
+    "Ja het restaurant is vol tijdens kerst man niet meer komen man": "Yes, the restaurant is full during Christmas, don't come anymore man",
+    "Vanuit China helemaal naar Den Bosch gekomen, what's up": "Came all the way from China to Den Bosch, what's up"
+}
