--- a/resources/lang/nl.json
+++ b/resources/lang/nl.json
@@ -1,1 +1,27 @@
-{}
+{
+    "The Golden Dragon - Home": "De Gouden Draak - Home",
+    "The Golden Dragon - Menu": "De Gouden Draak - Menukaart",
+    "The Golden Dragon - News": "De Gouden Draak - Nieuws",
+    "The Golden Dragon - Contact": "De Gouden Draak - Contact",
+    "The Golden Dragon": "De Gouden Draak",
+    "Chinese Indonesian Specialties": "Chinees Indische Specialiteiten",
+    "Menu": "Menukaart",
+    "News": "Nieuws",
+    "Contact": "Contact",
+    "Welcome to The Golden Dragon. Click this text to see this week's offers!": "Welkom bij De Gouden Draak. Klik op deze tekst om de aanbiedingen van deze week te zien!",
+    "For years, The Golden Dragon has been renowned for the best takeaway dishes in 's-Hertogenbosch.": "Al jaren is De Gouden Draak een begrip als het gaat om de beste afhaalgerechten in 's-Hertogenbosch.",
+    "We are pleased to offer you authentic dishes from Cantonese cuisine.": "Graag trakteren we u op authentieke gerechten uit de Cantonese keuken.",
+    "Special Student Offer": "Speciale Studentenaanbieding",
+    "Chinese Rice Table (2 persons)": "Chinese Rijsttafel (2 personen)",
+    "Choose 3 from the following dishes:": "Maak een keuze uit 3 van onderstaande keuzegerechten:",
+    "Shrimp with Fried Garlic": "Garnalen met Gebakken Knoflook",
+    "Chicken Fillet in Black Bean Sauce": "Kipfilet in Zwarte Bonen saus",
+    "With white rice. (Fried rice or noodles available for extra charge.)": "Met witte rijst. (Nasi of bami voor meerprijs mogelijk.)",
+    "Price:": "Prijs:",
+    "Download as PDF": "Download als PDF",
+    "Favorites": "Favorieten",
+    "The Golden Dragon is easy to find, close to the center, 5 minutes walk behind the central station.": "De Gouden Draak is eenvoudig te vinden, vlak bij het centrum, 5 minuten lopen achter het centraal station.",
+    "We finally have new chairs!!!": "We hebben eindelijk nieuwe stoelen!!!",
+    "Yes, the restaurant is full during Christmas, don't come anymore man": "Ja het restaurant is vol tijdens kerst man niet meer komen man",
+    "Came all the way from China to Den Bosch, what's up": "Vanuit China helemaal naar Den Bosch gekomen, what's up"
+}
